// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should render with background gray 1`] = `
.c0 {
  display: block;
  margin: 0 auto;
  padding: 0 1rem;
  min-height: 100%;
  width: 360px;
  background-color: #6b7688;
  color: #ffffff;
}

@media (min-width:480px) {
  .c0 {
    width: 480px;
  }
}

@media (min-width:780px) {
  .c0 {
    width: 780px;
  }
}

@media (min-width:1280px) {
  .c0 {
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
    height="100"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;

exports[`<Container /> should render with background gray 2`] = `
.c0 {
  display: block;
  margin: 0 auto;
  padding: 0 1rem;
  min-height: 100%;
  width: 360px;
}

@media (min-width:480px) {
  .c0 {
    width: 480px;
  }
}

@media (min-width:780px) {
  .c0 {
    width: 780px;
  }
}

@media (min-width:1280px) {
  .c0 {
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
    height="100"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;

exports[`<Container /> should render with background white 1`] = `
.c0 {
  display: block;
  margin: 0 auto;
  padding: 0 1rem;
  min-height: 100vh;
  width: 360px;
  background-color: #ffffff;
  color: #030303;
}

@media (min-width:480px) {
  .c0 {
    width: 480px;
  }
}

@media (min-width:780px) {
  .c0 {
    width: 780px;
  }
}

@media (min-width:1280px) {
  .c0 {
    width: 1280px;
  }
}

<div>
  <div
    class="c0"
    height="full"
  >
    <h1>
      Olá mundo
    </h1>
  </div>
</div>
`;
